--- a/index.html
+++ b/index.html
@@ -15,36 +15,22 @@
   </head>
   <body class="font-inter text-neutral-700">
     <div id="app" class="w-full h-full">
-      <div class="content w-full h-full p-4 flex flex-col gap-16">
-        <header class="grid grid-cols-9 grid-rows-1 text-xs uppercase font-medium leading-4">
-          <div>
-            <p>OVERVIEW</p>
-            <p>14 Images</p>
-          </div>
-          <div class="col-start-3">
-            <p>2018 ━</p>
-            <p>Ongoing</p>
-          </div>
-        </header>
-        <main id="main" class="overview-main-layout fill-image py-4 auto-rows-max">
-        </main>
-      </div>
     </div>
     <nav class="navigation-layout">
       <div class="col-span-2">
         <h1>Catalogued Works</h1>
       </div>
       <div class="col-span-3">
-        <a href="/about.html">Freelance Graphic Designer</a>
+        <a href="/about">Freelance Graphic Designer</a>
       </div>
       <div class="col-start-7">
         <a href="/">Overview</a>
       </div>
       <div>
-        <a href="/selected.html">Selected</a>
+        <a href="/selected">Selected</a>
       </div>
     </nav>
     <script defer type="module" src="/src/ts/main.ts"></script>
-    <script defer type="module" src="/src/ts/projects.ts"></script>
+    <script defer type="module" src="/src/ts/routing.js"></script>
   </body>
 </html>
