Update : Created smoothscrolling for selected projects

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Rafly Fathurrahman</title>
   </head>
-  <body class="font-inter text-neutral-700">
+  <body class="font-inter text-neutral-700 select-none">
     <div id="app" class="w-full h-full">
     </div>
     <nav class="navigation-layout">
@@ -31,5 +31,6 @@
       </div>
     </nav>
     <script defer type="module" src="/src/ts/routing.ts"></script>
+    <script defer type="module" src="/src/ts/smoothscrolling.ts"></script>
   </body>
 </html>
