Refactor some codes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="/selected">Selected</a>
       </div>
     </nav>
-    <script defer type="module" src="/src/ts/routing.ts"></script>
-    <script defer type="module" src="/src/ts/smoothscrolling.ts"></script>
+    <script defer type="module" src="/src/ts/utils/routing.ts"></script>
+    <script defer type="module" src="/src/ts/main.ts"></script>
   </body>
 </html>
