--- a/src/selected/index.html
+++ b/src/selected/index.html
@@ -4,19 +4,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/global.css">
-    <link rel="stylesheet" href="src/css/layout-main.css">
-    <link rel="stylesheet" href="src/css/layout-nav.css">
-    <link rel="stylesheet" href="src/css/page-transition.css">
+    <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Rafly Fathurrahman</title>
+    <title>Rafly Diaz ━ Selected Projects</title>
   </head>
   <body class="font-inter text-neutral-700 select-none">
     <canvas id="gl" class="absolute w-full h-full"></canvas>
-    <div id="app" class="w-full h-full">
-    </div>
+    <main class="content selection w-screen h-screen grid grid-rows-[auto_1fr] gap-y-24 pb-8">
+      <div style="transform:translateX(0%)" class="fill-image thumbnail-container p-1 w-max min-h-20 grid grid-flow-col gap-x-2 scroll-auto overflow-visible">
+      </div>
+      <div class="relative w-screen h-full overflow-hidden main-image-container">
+      </div>
+    </main>  
     <nav class="navigation-layout">
       <div class="col-span-2">
         <h1>Catalogued Works</h1>
@@ -31,7 +32,9 @@
         <a href="/selected">Selected</a>
       </div>
     </nav>
-    <script defer type="module" src="/src/ts/utils/routing.ts"></script>
-    <script defer type="module" src="/src/ts/main.ts"></script>
+    <script defer type="module" src="selected.ts"></script>
+    <script type="module" src="./utils/smoothscroll.ts"></script>
+    <script type="module" src="main.ts"></script>
   </body>
-</html>
+  </html>
+  
