Fixed the canvas issue

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <title>Rafly Fathurrahman</title>
   </head>
   <body class="font-inter text-neutral-700 select-none">
-    <canvas id="gl" class="absolute w-full h-full"></canvas>
     <div id="app" class="w-full h-full">
     </div>
     <nav class="navigation-layout">
@@ -32,6 +31,6 @@
       </div>
     </nav>
     <script defer type="module" src="/src/ts/utils/routing.ts"></script>
-    <script defer type="module" src="/src/ts/main.ts"></script>
+    <!-- <script defer type="module" src="/src/ts/main.ts"></script> -->
   </body>
 </html>
