Page transition for about page and little layout adjusments

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <title>Rafly Fathurrahman</title>
   </head>
   <body class="font-inter text-neutral-700 select-none">
-    <div id="app" class="w-full h-full">
+    <div class="overlay bg-white"></div>
+    <div id="app" class="w-full h-full bg-white">
     </div>
     <nav class="navigation-layout">
       <div class="col-span-2">
@@ -31,6 +32,5 @@
       </div>
     </nav>
     <script defer type="module" src="/src/ts/utils/routing.ts"></script>
-    <!-- <script defer type="module" src="/src/ts/main.ts"></script> -->
   </body>
 </html>
