overview page transition

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
       </div>
     </nav>
     <script defer type="module" src="/src/ts/utils/routing.ts"></script>
+    <script defer type="module" src="/src/ts/utils/handleImageClick.ts"></script>
   </body>
 </html>
