--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <div id="app" class="w-full h-full bg-white">
     </div>
     <nav class="navigation-layout">
-      <div class="col-span-2">
+      <div id="name" class="col-span-2">
         <h1>Catalogued Works</h1>
       </div>
-      <div class="col-span-3">
-        <a href="/about">Freelance Graphic Designer</a>
+      <div class="md:col-span-3">
+        <a id="about-button" href="/about">About Me</a>
       </div>
-      <div class="col-start-7">
+      <div id="home-button" class="col-start-9">
         <a href="/">Overview</a>
       </div>
-      <div>
+      <div id="selected-button">
         <a href="/selected">Selected</a>
       </div>
     </nav>
