added og metadata

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no">
+    <meta name="robots" content="all">
+    <title>Rafly Diaz — Freelance Digital Designer</title>
+    <meta name="description" content="Contact information for Rafly Fathurrahman">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://reman.vercel.app">
+    <meta property="og:title" content="Rafly Fathurrahman — Book 22">
+    <meta property="og:description" content="Contact information for Rafly Fathurrahman.">
+    <!-- <meta property="og:image" content="">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630"> -->
     <link rel="stylesheet" href="/src/css/global.css">
     <link rel="stylesheet" href="src/css/layout-main.css">
     <link rel="stylesheet" href="src/css/layout-nav.css">
@@ -11,7 +22,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Rafly Fathurrahman</title>
   </head>
   <body class="font-inter text-neutral-700 select-none">
     <div class="overlay bg-white"></div>
